# DE

./: .gitignore  IMPROVEMENTS.md  README.md  check_db_counts.py  pipeline.py  pyproject.toml  run_analysis.py  tcas_scraper.py
.claude/: launch.json
data/: staging_data.csv
data/clean/: youtube_clean.csv
data/downloads_tcas/: TCAS62_maxmin.xlsx  TCAS64_maxmin.xlsx  TCAS65_maxmin.xlsx  TCAS67_maxmin.xlsx
data/raw/: youtube_raw.csv  youtube_raw_progress.json
data/raw/downloads_tcas/: T68-stat-r3_1-maxmin-20May25.xlsx  T68-stat-r3_2-maxmin-24May25.xlsx  TCAS63_maxmin.xlsx
notebooks/: new.ipynb
sql/: analysis.sql  create_tables.sql
src/: config.py
src/analysis/: generate_plots.py
src/demo/: app.py  queries.py
src/extract/: extract_google_trends.py  extract_mhesi.py  extract_tcas.py  extract_wikipedia.py  extract_youtube.py
src/load/: init_db.py  load_dimensions.py  load_google_trends.py  load_mhesi.py  load_tcas.py  load_wikipedia.py  load_youtube.py
src/transform/: clean_google_trends.py  clean_youtube.py
